# todotxt2org

./: .gitmodules  pyproject.toml
todotxt2org/: __main__.py
