[tool.poetry]
name = "todotxt2org"
version = "0.1.0"
description = ""
authors = ["Anton Tetov <anton@tetov.se>"]

[tool.poetry.dependencies]
python = "^3.10"
orgparse = "^0.3.1"
todotxtio = "^0.2.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^24.3.0"
reorder-python-imports = "^3.0.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
